--- a/about.html
+++ b/about.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>About Page</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, iure.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem, ipsum dolor.</p>
 </body>
 </html>
