--- a/product.html
+++ b/product.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Products</title>
 </head>
 <body>
-    <h1>About Page</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, iure.</p>
+    <h2>Products</h2>
 </body>
 </html>
